test/units/TypingSpec/invalid/types/synth-untyped-lam.algst
let x = \y -> y in x 10
